--- a/index.html
+++ b/index.html
@@ -163,10 +163,60 @@
                         <div class="col">
                             <a href="gato.html"><button type="button" class="btn-block">Gato</button></a>
                         </div>
+                    </div><br><br>
+                    <div class="row">
+                        <div class="col">
+                            <!-- Button to Open the Modal -->
+                            <button type="button" class="btn-block" data-toggle="modal" data-target="#myModal">
+                                <span class="glyphicon glyphicon-edit"></span>
+                                Datos del encuestador
+                            </button>
+                        </div>
                     </div>
                 </div>                
             </form>
         </div>
+        <!-- Data encuestador -->
+
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Datos del encuestador</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <form id="datos_encuestador">
+                        <!-- Modal body -->
+                        <div class="modal-body">
+
+                            <div class="form-group">
+                                <label>Nombre</label>
+                                <input type="text" class="form-control" id="nombre_enc" name="nombre_enc" required>
+                            </div>
+                            <div class="form-group">
+                                <label>Apellidos</label>
+                                <input type="text" class="form-control" id="app_enc" name="app_enc" required>
+                            </div>
+                        </div>
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                            <div class="row">
+                                <div class="col">
+                                    <div id="result"></div>
+                                </div>
+                                <div class="col">
+                                    <button type="submit" class="btn btn-default">Guardar Datos</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- Data encuestador -->
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -186,6 +236,33 @@
         <script  type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
         <script type="text/javascript" src="js/validator.min.js"></script>
         <script type="text/javascript" src="js/regForm.js"></script>
+        <script>
+            document.getElementById("result").innerHTML = localStorage.getItem("nombre_enc");
 
+            $("#datos_encuestador").validator().on("submit", function (event) {
+                if (event.isDefaultPrevented()) {
+                    // handle the invalid form...
+                    console.log("faltan datos");
+                } else {
+                    // everything looks good!
+                    //event.preventDefault();
+                    console.log("submit");
+                    var nombre_enc = $("#nombre_enc").val();
+                    var app_enc = $("#app_enc").val();
+
+                    // Check browser support
+                    if (typeof (Storage) !== "undefined") {
+                        // Store
+                        localStorage.setItem("nombre_enc", nombre_enc + " " + app_enc);
+                        // Retrieve
+                        document.getElementById("result").innerHTML = localStorage.getItem("nombre_enc");
+                    } else {
+                        document.getElementById("result").innerHTML = "Sorry, your browser does not support Web Storage...";
+                    }
+
+                    console.log("Tu nombre es: " + nombre_enc + " " + app_enc);
+                }
+            });
+        </script>
     </body>
 </html>
